cmake_minimum_required(VERSION 3.4.1)
project(app)
find_package(OpenCV REQUIRED)
set(onnxruntime_INCLUDE_DIRS /opt/onnxruntime-linux-x64-1.6.0/include)
include_directories(${onnxruntime_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(app main.cpp)
target_link_libraries(app ${OpenCV_LIBS} /opt/onnxruntime-linux-x64-1.6.0/lib/libonnxruntime.so)
set_property(TARGET app PROPERTY CXX_STANDARD 14)
